# Abyssal-CV-2022-Engineering

./: CMakeLists.txt  README.md  main.cpp
asset/: box_component_250.jpge  box_component_900.jpge  robomaster-config.hpp  robomaster-config.ini  robomaster-define.hpp
asset/AutoSaveVideo/: 2022.06.07 22-48-01.avi  2022.06.07 22-51-03.avi  2022.06.07 23-16-49.avi  2022.06.07 23-19-28.avi  2022.06.07 23-34-04.avi  2022.06.07 23-38-42.avi  2022.06.07 23-40-58.avi  2022.06.07 23-46-48.avi  2022.06.07 23-48-31.avi  2022.06.08 00-12-21.avi  2022.06.08 00-19-21.avi  2022.06.08 00-29-09.avi  2022.06.08 00-29-31.avi  2022.06.08 00-34-55.avi  2022.06.08 01-09-02.avi  2022.06.08 01-09-11.avi  2022.06.08 01-09-25.avi  2022.06.08 01-11-00.avi
include/: example-imgui.hpp  example-utils.hpp  example.hpp
include/camera/: camera-cv-helpers.hpp  camera-stream.hpp
include/control/: control-module.hpp
include/depth/: depth-analysis.hpp  depth-tool.hpp  depth-tools.hpp
include/identify/: identify-box.hpp  identify-ore.hpp  identify-stream.hpp  identify-tools.hpp
include/record/: record-data.hpp
include/serial/: serial-port.hpp
src/: main.cpp
src/box/: box-identify.cpp  box-identify.hpp  box-tool.hpp
src/camera/: camera-stream.cpp  camera-stream.hpp
src/control/: control-module.cpp  control-switch.cpp  control-switch.hpp
src/depth/: depth-analysis.cpp  depth-analysis.hpp  depth-tool.hpp
src/identify/: identify-box.cpp  identify-ore.cpp  identify-stream.cpp
src/ore/: ore-identify.cpp  ore-identify.hpp  ore-tool.hpp
src/record/: record-data.cpp  record-video.cpp  record-video.hpp
src/serial/: serial-port.cpp  serial-port.hpp
src/serial/serial-TUP/: serial-port-TUP.cpp  serial-port-TUP.hpp  serial-synchronize-TUP.cpp
src/serial/serial-TUP/serial-CRC-TUP/: serial-CRC-TUP.hpp
src/switch/: switch-mode.cpp  switch-mode.hpp  switch-tool.hpp
tools/: auto-start-run.sh  github-access-tokens.txt  process-daemon.sh  tools-config.hpp
